--- a/style.css
+++ b/style.css
@@ -1,8 +1,65 @@
+html {
+    width: 100%;
+    height: 100%;
+}
 
+/* BODY */
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color:floralwhite;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    background-color: wheat;
+    margin-bottom: 2%;
+}
+
+header h1 {
+    margin: 0;
+    font-size: 70px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 15px;
+}
+
+#container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.playerNameContainer{
+    font-size: 30px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+.grid-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 80px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    width: 200px;
+    height: 200px;
+}
 
 /* FOOTER */
 
-footer{
+footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,6 +67,6 @@ footer{
     margin-top: 1%;
 }
 
-footer p{
+footer p {
     margin-right: 5px;
 }
