--- a/style.css
+++ b/style.css
@@ -35,8 +35,25 @@ header h1 {
 }
 
 .playerNameContainer{
+    display: flex;
+    flex-direction: column;
     font-size: 30px;
     font-family: 'Courier New', Courier, monospace;
+}
+
+.playerNameContainer button{
+    background-color: antiquewhite;
+    border: 1px solid black;
+    border-radius: 5px;
+    height: 30px;
+}
+
+.playerNameContainer button:hover{
+    background-color: rgb(247, 238, 226);
+}
+
+.playerNameContainer button:active{
+    background-color: rgb(245, 214, 174);
 }
 
 .grid-container {
