--- a/style.css
+++ b/style.css
@@ -74,6 +74,15 @@ header h1 {
     height: 200px;
 }
 
+.grid-item:hover{
+    background-color:rgb(247, 218, 160);
+}
+
+.grid-item:active{
+    background-color:rgb(247, 196, 93);
+}
+
+
 /* FOOTER */
 
 footer {
