--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@ header h1 {
     flex-direction: column;
     font-size: 30px;
     font-family: 'Courier New', Courier, monospace;
+    width: 15%;
+    text-align: center;
 }
 
 .playerNameContainer button{
